{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "1d1ee8b1-9600-4949-8c2f-c642bd3d1f00",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a6d0bc6c-0593-4a20-912e-8e25e4e0333a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ControllerLook",
                    "type": "Value",
                    "id": "9c6f1f77-5a3a-4b12-ba89-2dd61578b7b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "788d0258-cb44-4a44-afd6-a47b569625ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "1b86920b-3ff9-4906-be69-8221110857e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuickAttack",
                    "type": "Button",
                    "id": "fb20cdf9-b70d-41de-976e-0105132bbd7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "14ec120b-2ae2-47d2-8388-4cab5a60501d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scrollwheel",
                    "type": "Value",
                    "id": "e4a4c701-2cb1-4e51-b6ab-8e83db6ce3cf",
                    "expectedControlType": "",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "LeftShoulder",
                    "type": "Button",
                    "id": "dadb30ed-e897-492e-b85f-2760dd30ffb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightShoulder",
                    "type": "Button",
                    "id": "9d5e6b14-6a81-4791-8a9c-ae910fbcec20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EnableBuilding",
                    "type": "Button",
                    "id": "7de90c85-5f8e-426a-9f85-18491174f457",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0a9ae402-665b-4f98-be3e-fbdabd265621",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "b1936f17-7361-4dec-8882-6c015cec226d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97a9868e-5c6f-4528-abab-f46762cf9d48",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e5350732-2d1d-40e9-a912-885412228756",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "eda93dd4-2938-4b24-994f-de984734d1ee",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f48d06c3-42ac-49eb-9ed8-29bab14ea1ce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7c2e5a52-0683-42b9-b28f-72f8dc295808",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Console",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d347e0b-f66a-42b8-aab1-d8a4741e164b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Console",
                    "action": "ControllerLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b54cff6-8f96-4fc3-8809-c0968f989b3a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f3674c2-bed4-4658-b56d-712b9f99e843",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ee94b0e-8ab1-4c54-9244-cbc3370de8bb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;PC",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15e4f2b9-9adb-47a0-a18e-e6d857ef23b0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;PC",
                    "action": "QuickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f602433b-76ff-4e7d-b3db-1f93e63aa872",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "QuickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2ef2697-16b0-4540-8724-d226c3bd33c7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;PC",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3426cebd-3f85-43eb-8d0c-76d491ff3131",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c041be9-4fcf-4a06-a227-c31a15a85e3b",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC;Controls",
                    "action": "Scrollwheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b254c8d-ffef-415d-80fe-fb4d29be52cf",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ba9b180-45e6-403c-afce-81f59c261bf1",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "037531b9-7c0c-4604-911b-0c404236f4c8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;PC",
                    "action": "EnableBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3188432-3e8c-43a0-a701-98aff9b1aca0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "EnableBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbcd0704-7503-4083-a1f6-aadcc4da5a35",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0306137-b9a7-4c86-98b0-1f703b163454",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls;Console",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controls",
            "bindingGroup": "Controls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Console",
            "bindingGroup": "Console",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}